--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,11 @@ body {
   background-color: #ffffff;
   -webkit-text-size-adjust: 100%; }
 
+.coming-soon {
+  font-style: italic;
+  font-weight: 500;
+  color: #F57400; }
+
 /**
  * Set `margin-bottom` to maintain vertical rhythm
  */
@@ -34,6 +39,13 @@ ul, ol, dl, figure,
 img {
   max-width: 100%;
   vertical-align: middle; }
+
+@media screen and (max-width: 600px) {
+  .hero {
+    max-width: -webkit-calc(800px - (30px));
+    max-width: calc(800px - (30px));
+    padding-right: 15px;
+    padding-left: 15px; } }
 
 /**
  * Figures
