--- a/css/main.css
+++ b/css/main.css
@@ -155,6 +155,14 @@ pre {
     fill: #828282; }
 
 /**
+ * Badges
+ */
+.app-store-badge {
+  float: right; }
+  .app-store-badge img {
+    height: 50px; }
+
+/**
  * Site header
  */
 .site-header {
