--- a/css/main.css
+++ b/css/main.css
@@ -12,12 +12,21 @@ dl, dd, ol, ul, figure {
  */
 body {
   font-family: -apple-system, Helvetica, Arial, sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1.5;
   font-weight: 300;
   color: #111;
   background-color: #ffffff;
   -webkit-text-size-adjust: 100%; }
+  @media screen and (min-width: 480px) {
+    body {
+      font-size: 18px; } }
+  @media screen and (min-width: 640px) {
+    body {
+      font-size: 20px; } }
+  @media screen and (min-width: 1024px) {
+    body {
+      font-size: 22px; } }
 
 .coming-soon {
   font-style: italic;
@@ -88,8 +97,8 @@ a {
  * Blockquotes
  */
 blockquote {
-  color: #828282;
-  border-left: 4px solid #e8e8e8;
+  color: #828299;
+  border-left: 4px solid #f2f2f5;
   padding-left: 15px;
   font-size: 18px;
   letter-spacing: -1px;
@@ -103,7 +112,7 @@ blockquote {
 pre,
 code {
   font-size: 15px;
-  border: 1px solid #e8e8e8;
+  border: 1px solid #f2f2f5;
   border-radius: 3px;
   background-color: #eef; }
 
@@ -152,7 +161,7 @@ pre {
   height: 16px;
   vertical-align: middle; }
   .icon > svg path {
-    fill: #828282; }
+    fill: #828299; }
 
 /**
  * Badges
@@ -164,14 +173,33 @@ pre {
 
 /** Constellation Site Specific */
 #hero {
-  padding: 10px; }
+  position: fixed;
+  top: 80px;
+  right: 10px;
+  padding: 10px;
+  width: auto;
+  max-width: 33%; }
+
+#enzo {
+  background-color: RGBA(131, 142, 240, 1);
+  text-color: white; }
+  #enzo .site-nav {
+    background-color: RGBA(131, 142, 240, 1); }
+  #enzo a {
+    color: white; }
+  #enzo p, #enzo h1, #enzo h2, #enzo h3, #enzo h4, #enzo h5 {
+    color: white; }
+  #enzo .page-content {
+    padding-right: 37%; }
+  #enzo .site-footer {
+    padding-right: 37%; }
 
 /**
  * Site header
  */
 .site-header {
   border-top: 5px solid #2a7ae2;
-  border-bottom: 1px solid #e8e8e8;
+  border-bottom: 1px solid #f2f2f5;
   min-height: 56px;
   position: relative; }
 
@@ -182,7 +210,7 @@ pre {
   margin-bottom: 0;
   float: left; }
   .site-title, .site-title:visited {
-    color: #424242; }
+    color: #464656; }
 
 .site-nav {
   float: right;
@@ -200,7 +228,7 @@ pre {
       top: 9px;
       right: 30px;
       background-color: #ffffff;
-      border: 1px solid #e8e8e8;
+      border: 1px solid #f2f2f5;
       border-radius: 5px;
       text-align: right; }
       .site-nav .menu-icon {
@@ -215,7 +243,7 @@ pre {
           width: 18px;
           height: 15px; }
           .site-nav .menu-icon > svg path {
-            fill: #424242; }
+            fill: #464656; }
       .site-nav .trigger {
         clear: both;
         display: none; }
@@ -230,7 +258,7 @@ pre {
  * Site footer
  */
 .site-footer {
-  border-top: 1px solid #e8e8e8;
+  border-top: 1px solid #f2f2f5;
   padding: 30px 0; }
 
 .footer-heading {
@@ -244,7 +272,7 @@ pre {
 
 .footer-col-wrapper {
   font-size: 15px;
-  color: #828282;
+  color: #828299;
   margin-left: -15px; }
 
 .footer-col {
@@ -295,7 +323,7 @@ pre {
 
 .post-meta {
   font-size: 14px;
-  color: #828282; }
+  color: #828299; }
 
 .post-link {
   display: block;
