--- a/css/main.css
+++ b/css/main.css
@@ -173,7 +173,7 @@ pre {
 
 /** Constellation Site Specific */
 #hero {
-  position: absolute;
+  float: right;
   top: 80px;
   right: 10px;
   padding: 10px;
@@ -197,12 +197,11 @@ pre {
   #enzo #v0 {
     float: right;
     top: 80px;
-    margin-top: 10px;
-    right: 10px;
     padding: 10px;
     height: auto;
-    width: 33%;
-    max-width: 33%;
+    margin-top: 15px;
+    width: auto;
+    max-width: 50%;
     z-index: 1000; }
 
 /**
