--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ body {
   font-family: -apple-system, Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.5;
-  font-weight: 300;
+  font-weight: 100;
   color: #111;
   background-color: #ffffff;
   -webkit-text-size-adjust: 100%; }
@@ -79,7 +79,7 @@ li > ol {
  * Headings
  */
 h1, h2, h3, h4, h5, h6 {
-  font-weight: 500; }
+  font-weight: 200; }
 
 /**
  * Links
@@ -177,9 +177,27 @@ pre {
   top: 80px;
   right: 10px;
   padding: 10px;
+  padding-top: 35px;
   width: auto;
   height: auto;
   max-width: 33%; }
+
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  margin-bottom: 25px;
+  padding-top: 0px;
+  height: 0;
+  overflow: hidden; }
+
+.video-container iframe,
+.video-container object,
+.video-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; }
 
 #enzo {
   background-color: RGBA(131, 142, 240, 1);
@@ -203,6 +221,14 @@ pre {
     width: auto;
     max-width: 50%;
     z-index: 1000; }
+  #enzo .app_store_icon {
+    width: 200px;
+    height: auto;
+    float: left;
+    padding: 25px; }
+  #enzo .hero_movie {
+    height: auto;
+    width: 100%; }
 
 /**
  * Site header
